subiendo actualizacion d modulos

--- a/src/app/admisiones/admision/admision.component.html
+++ b/src/app/admisiones/admision/admision.component.html
@@ -44,28 +44,46 @@
             </table>
           </div>
         </div>
-        <form action="">
+        <form [formGroup]="admisionForm">
         <div class="row mt-4">
           <div class="col-md-6">
             <h6>Datos del Paciente</h6>
             <div class="row mt-2">
                <div class="row">
                 <div class="col-md-4">
-                    <label for="">DNI</label>
-                  <input type="text" class="form-control form-control-sm">
+                  <label for="">DNI</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    formControlName="dni_admision"
+                  >
                 </div>
                 <div class="col-md-4">
                   <label for="">No HC</label>
-                  <input type="text" class="form-control form-control-sm">
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    formControlName="hc_admision"
+                  >
                 </div>
                 <div class="col-md-4">
                   <label for="">¿lista de espera?</label> <br>
                   <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                    <input
+                      class="form-check-input"
+                      type="radio" name="inlineRadioOptions"
+                      id="inlineRadio1" value="option1"
+                      formControlName="si_admision"
+                    >
                     <label class="form-check-label" for="inlineRadio1">Si</label>
                   </div>
                   <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                    <input
+                      class="form-check-input"
+                      type="radio" name="inlineRadioOptions"
+                      id="inlineRadio2" value="option2"
+                      formControlName="no_admision"
+                    >
                     <label class="form-check-label" for="inlineRadio2">No</label>
                   </div>
                 </div>
@@ -73,7 +91,11 @@
               <div class="row mt-1">
                 <div class="col-md-12">
                   <label for="">Nombre Completo</label>
-                  <input type="text" class="form-control form-control-sm">
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    formControlName="nombre_admision"
+                  >
                 </div>
               </div>
               <div class="row mt-2">
@@ -81,7 +103,8 @@
                   <label for="">Especialidad</label>
                   <select
                     class="form-control form-control-sm"
-                  > 
+                    formControlName="especialidad_admision"
+                  >
                     <option value="">Seleccione una opcion</option>
                   </select>
                 </div>
@@ -89,7 +112,8 @@
                   <label for="">Doctor</label>
                   <select
                     class="form-control form-control-sm"
-                  > 
+                    formControlName="doctor_admision"
+                  >
                     <option value="">Seleccione una opcion</option>
                 </select>
                 </div>
@@ -102,46 +126,89 @@
               <div class="row">
                 <div class="col-md-6">
                   <label for="">Fecha</label>
-                  <input type="date" class="form-control form-control-sm">
+                  <input
+                    type="date"
+                    class="form-control form-control-sm"
+                    formControlName="fecha_admision"
+                  >
                 </div>
                 <div class="col-md-6">
                   <label for="">No Factura</label>
-                  <input type="text" class="form-control form-control-sm">
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    formControlName="factura_admision"
+                  >
                 </div>
               </div>
               <div class="row mt-1">
                 <div class="col-md-4">
                   <label for="">Costo</label>
-                  <input type="number" class="form-control form-control-sm">
+                  <input
+                    type="number"
+                    class="form-control form-control-sm"
+                    formControlName="costo_admision"
+                  >
                 </div>
                 <div class="col-md-4">
                   <label for="">Descuento</label>
-                  <input type="number" class="form-control form-control-sm">
+                  <input
+                    type="number"
+                    class="form-control form-control-sm"
+                    formControlName="descuento_admision"
+                  >
                 </div>
                 <div class="col-md-4">
                   <label for="">Comision</label>
-                  <input type="number" class="form-control form-control-sm">
+                  <input
+                    type="number"
+                    class="form-control form-control-sm"
+                    formControlName="comision_admision"
+                  >
                 </div>
               </div>
               <div class="row mt-1">
                 <div class="col-md-4">
                   <label for="">Cantidad recibida</label>
-                  <input type="number" class="form-control form-control-sm">
+                  <input
+                    type="number"
+                    class="form-control form-control-sm"
+                    formControlName="recibida_admision"
+                  >
                 </div>
                 <div class="col-md-4">
                   <label for="">Cantidad a Devolver</label>
-                  <input type="text" class="form-control form-control-sm">
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    formControlName="devolver_admision"
+                  >
                 </div>
                 <div class="col-md-4">
                   <label for="">Forma de pago</label>
                   <div class="form-check">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="exampleRadios"
+                      id="exampleRadios1"
+                      value="option1"
+                      checked
+                      formControlName="efectivo_admision"
+                    >
                     <label class="form-check-label" for="exampleRadios1">
                       Efectivo
                     </label>
                   </div>
                   <div class="form-check">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="exampleRadios"
+                      id="exampleRadios2"
+                      value="option2"
+                      formControlName="tarjeta_admision"
+                    >
                     <label class="form-check-label" for="exampleRadios2">
                       Tarjeta
                     </label>
@@ -155,7 +222,11 @@
               <h5 class="text-center">TOTAL</h5>
             </div>
             <div class="col-md-3">
-              <input type="text" class="form-control form-control-sm">
+              <input
+                type="text"
+                class="form-control form-control-sm"
+                formControlName="total_admision"
+              >
             </div>
           </div>
         </div>
