--- a/src/app/contabilidad/gastos/gastos.component.html
+++ b/src/app/contabilidad/gastos/gastos.component.html
@@ -6,7 +6,7 @@
 
 <div class="min-height-300 bg-default position-absolute w-100"></div>
 <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
-  <app-menu></app-menu> 
+  <app-menu></app-menu>
 </aside>
 
 <main class="main-content position-relative border-radius-lg">
@@ -30,11 +30,12 @@
                      </tr>
                   </thead>
                   <tbody>
-  
+
                   </tbody>
                 </table>
               </div>
             </div>
+            <form [formGroup]="gastosForm" >
             <div class="col-md-5">
               <div class="row">
                 <div class="col-md-5">
@@ -42,12 +43,14 @@
                   <input
                     type="text"
                     class="form-control form-control-sm"
+                    formControlName="empresa_gastos"
                   >
                 </div>
                 <div class="col-md-5">
                   <label>Por Stock</label>
                   <select
                     class="form-control form-control-sm"
+                    formControlName="stock_gastos"
                   >
                     <option value="">Seleccione una opcion</option>
                   </select>
@@ -57,6 +60,7 @@
                   <input
                       type="text"
                       class="form-control form-control-sm"
+                      formControlName="cant_gastos"
                   >
                   </div>
               </div>
@@ -66,20 +70,23 @@
                     <input
                       type="text"
                       class="form-control form-control-sm"
+                      formControlName="codigo_gastos"
                     >
                   </div>
                 <div class="col-md-4">
                   <label>Fecha Inicial</label>
                   <input
-                     type="date"
+                    type="date"
                     class="form-control form-control-sm"
+                    formControlName="inicial_gastos"
                   >
                 </div>
                 <div class="col-md-4">
                     <label>Fecha Final</label>
                     <input
-                       type="date"
+                      type="date"
                       class="form-control form-control-sm"
+                      formControlName="final_gastos"
                     >
                   </div>
               </div>
@@ -91,6 +98,7 @@
               </div>
               <br>
             </div>
+          </form>
           </div>
         </div>
       </div>
