--- a/src/app/ecografias/ecografia/ecografia.component.html
+++ b/src/app/ecografias/ecografia/ecografia.component.html
@@ -6,7 +6,7 @@
 
 <div class="min-height-300 bg-default position-absolute w-100"></div>
 <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
-  <app-menu></app-menu> 
+  <app-menu></app-menu>
 </aside>
 
 <main class="main-content position-relative border-radius-lg">
@@ -71,6 +71,7 @@
                 </tbody>
               </table>
             </div>
+            <form [formGroup]="ecografiaForm">
             <div class="col-md-5">
               <div class="row">
                 <div class="col-md-5">
@@ -78,6 +79,7 @@
                   <input
                     type="text"
                     class="form-control form-control-sm"
+                    formControlName="dni_ecografia"
                   >
                 </div>
                 <div class="col-md-7">
@@ -85,6 +87,7 @@
                     <input
                       type="text"
                       class="form-control form-control-sm"
+                      formControlName="nombre_ecografia"
                     >
                   </div>
               </div>
@@ -93,6 +96,7 @@
                   <label>Tipo Ecografia</label>
                   <select
                     class="form-control form-control-sm"
+                    formControlName="tipo_ecografia"
                   >
                     <option value="">Seleccione una opcion</option>
                     <option value="">Ecografia de mama</option>
@@ -106,17 +110,19 @@
                 <div class="col-md-4">
                   <label>Fecha</label>
                   <input
-                     type="date"
+                    type="date"
                     class="form-control form-control-sm"
+                    formControlName="fecha_ecografia"
                   >
                 </div>
               </div>
-              
+
               <div class="row mt-1">
                 <div class="col-md-12">
                   <label>Observación</label>
                   <textarea
                     class="form-control form-control-sm"
+                    formControlName="observacion_ecografia"
                   ></textarea>
                 </div>
               </div>
@@ -127,6 +133,7 @@
               </div>
               <br>
             </div>
+          </form>
           </div>
         </div>
       </div>
