--- a/src/app/seguridad/usuarios/usuarios.component.html
+++ b/src/app/seguridad/usuarios/usuarios.component.html
@@ -4,7 +4,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 <div class="min-height-300 bg-default position-absolute w-100"></div>
 <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
-  <app-menu></app-menu> 
+  <app-menu></app-menu>
 </aside>
 
 <main class="main-content position-relative border-radius-lg">
@@ -32,12 +32,14 @@
               </table>
             </div>
             <div class="col-md-5">
+              <form [formGroup]="usuariosForm">
               <div class="row">
                 <div class="col-md-6">
                   <label>Apellidos</label>
                   <input
                     type="text"
                     class="form-control form-control-sm"
+                    formControlName="apellidos_usuarios"
                   >
                 </div>
                 <div class="col-md-6">
@@ -45,6 +47,7 @@
                   <input
                       type="text"
                       class="form-control form-control-sm"
+                      formControlName="nombre_usuarios"
                   >
                   </div>
               </div>
@@ -53,6 +56,7 @@
                   <label>Tipo Usuario</label>
                   <select
                     class="form-control form-control-sm"
+                    formControlName="tipo_usuarios"
                   >
                     <option value="">Seleccione una opcion</option>
                   </select>
@@ -62,6 +66,7 @@
                   <input
                     type="text"
                     class="form-control form-control-sm"
+                    formControlName="telefono_usuarios"
                   >
                 </div>
               </div>
@@ -71,6 +76,7 @@
                   <input
                     type="text"
                     class="form-control form-control-sm"
+                    formControlName="correo_usuarios"
                   >
                 </div>
               </div>
@@ -80,6 +86,7 @@
                   <input
                     type="text"
                     class="form-control form-control-sm"
+                    formControlName="usuario_usuarios"
                   >
                 </div>
                 <div class="col-md-6">
@@ -87,6 +94,7 @@
                     <input
                       type="text"
                       class="form-control form-control-sm"
+                      formControlName="contraseña_usuarios"
                     >
                   </div>
               </div>
@@ -95,6 +103,7 @@
                   <button class="btn btn-primary btn-xs mt-2"> <i class="fas fa-search"></i> Guardar</button>
                 </div>
               </div>
+              </form>
               <br>
             </div>
           </div>
