--- a/src/app/admisiones/admision/admision.component.html
+++ b/src/app/admisiones/admision/admision.component.html
@@ -3,14 +3,13 @@
 <!-- * * * * * * * * * * * JERSON GALVEZ ENSUNCHO * * * * * * * * * * * -->
 <!-- ******* * * * * * * * PROYECTO CLINICSOFT * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-<!-- <p-toast></p-toast>
-<p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000"></p-confirmDialog> -->
+
 <div class="min-height-300 bg-default position-absolute w-100"></div>
 <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
   <app-menu></app-menu>
 </aside>
 <main class="main-content position-relative border-radius-lg">
-  <app-cerrarsesion titulo="Admisión"></app-cerrarsesion>
+  <app-cerrarsesion titulo="Admision"></app-cerrarsesion>
   <div class="container-fluid py-1">
     <div class="row">
       <div class="card">
@@ -44,10 +43,10 @@
             </table>
           </div>
         </div>
-        <form [formGroup]="admisionForm">
         <div class="row mt-4">
           <div class="col-md-6">
             <h6>Datos del Paciente</h6>
+            <form [formGroup]="admisionForm">
             <div class="row mt-2">
                <div class="row">
                 <div class="col-md-4">
@@ -71,8 +70,10 @@
                   <div class="form-check form-check-inline">
                     <input
                       class="form-check-input"
-                      type="radio" name="inlineRadioOptions"
-                      id="inlineRadio1" value="option1"
+                      type="radio"
+                      name="inlineRadioOptions"
+                      id="inlineRadio1"
+                      value="option1"
                       formControlName="si_admision"
                     >
                     <label class="form-check-label" for="inlineRadio1">Si</label>
@@ -119,10 +120,12 @@
                 </div>
               </div>
             </div>
+          </form>
           </div>
+
           <div class="col-md-6">
             <h6>Datos de la Factura</h6>
-            <div class="row">
+            <form [formGroup]="admisionForm2">
               <div class="row">
                 <div class="col-md-6">
                   <label for="">Fecha</label>
@@ -215,6 +218,7 @@
                   </div>
                 </div>
               </div>
+            </form>
             </div>
           </div>
           <div class="row mt-3">
@@ -230,8 +234,6 @@
             </div>
           </div>
         </div>
-      </form>
       </div>
     </div>
-   </div>
   </div>
