--- a/src/app/seguridad/iniciarsesion/iniciarsesion.component.html
+++ b/src/app/seguridad/iniciarsesion/iniciarsesion.component.html
@@ -28,33 +28,71 @@
       <h4 class="font-weight-bolder text-center mt-4">Iniciar sesión</h4>
     </div>
     <div class="card-body">
-    <form role="form">
+
+      <div
+        class="alert alert-danger alert-dismissible fade show text-white"
+        role="alert"
+        [hidden]="loginAlert"
+      >
+        <strong>Error !</strong> El usuario y contraseña ingresado son invalidos.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"> <i class="fas fa-times"></i> </button>
+      </div>
+
+    <form [formGroup]="loginForm">
     <div class="mb-3">
-    <input type="text" class="form-control form-control-lg" placeholder="Usuario" title="Usuario">
+      <input
+        type="text"
+        class="form-control form-control-lg"
+        placeholder="Usuario"
+        formControlName="usuario"
+      >
     </div>
     <div class="mb-3">
-    <input type="password" class="form-control form-control-lg" placeholder="Contraseña" title="Contraseña">
+      <input
+        type="password"
+        class="form-control form-control-lg"
+        placeholder="Contraseña"
+        formControlName="password"
+
+      >
     </div>
     <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" id="rememberMe">
-    <label class="form-check-label" for="rememberMe">Acuérdame</label>
+      <input
+        class="form-check-input"
+        type="checkbox"
+        id="rememberMe"
+        formControlName="recordar"
+        
+      >
+        <label class="form-check-label" for="rememberMe">Acuérdame</label>
     </div>
     <div class="text-center">
-    <button type="button" class="btn btn-lg btn-dark btn-lg w-100 mt-4 mb-0">Iniciar sesión</button>
+      <button
+        class="btn btn-lg btn-dark btn-lg w-100 mt-4 mb-0"
+        (click)="iniciarSesion()"
+        [disabled]="loginForm.invalid"
+      >
+        Iniciar sesión
+      </button>
     </div>
     </form>
     </div>
     <div class="card-footer text-center pt-0 px-lg-2 px-1">
     <p class="mb-4 text-sm mx-auto">
-    ¿No tienes una cuenta?
-    <a href="javascript:;" class="text-primary text-gradient font-weight-bold">Inscribete</a>
+      ¿No tienes una cuenta?
+      <a
+        href="javascript:;"
+        class="text-primary text-gradient font-weight-bold"
+      >
+        Inscribete
+      </a>
     </p>
     </div>
-    </div>
-    </div>
-    
-    </div>
-    </div>
-    </div>
-    </section>
-    </main>
+  </div>
+ </div>
+</div>
+</div>
+</div>
+</section>
+</main>
+
