--- a/src/app/componentes/cerrarsesion/cerrarsesion.component.html
+++ b/src/app/componentes/cerrarsesion/cerrarsesion.component.html
@@ -14,7 +14,11 @@
         </div>
         <ul class="navbar-nav  justify-content-end">
           <li class="nav-item d-flex align-items-center">
-            <a href="#" class="nav-link text-white font-weight-bold px-0">
+            <a
+              href="/"
+              (click)="cerrarSesion()"
+              class="nav-link text-white font-weight-bold px-0"
+            >
               <i class="fa fa-user me-sm-1"></i>
               <span class="d-sm-inline d-none">Cerrar Sesión</span>
             </a>
