--- a/src/app/admisiones/pacientes/pacientes.component.html
+++ b/src/app/admisiones/pacientes/pacientes.component.html
@@ -71,12 +71,17 @@
           <div class="row">
             <div class="col-md-2">
               <label>DNI</label>
+              <div class="input-group">
               <input
                 type="number"
                 class="form-control form-control-sm"
                 formControlName="crearpaciente_dni"
-                (blur)="getPatient()"
+                (keyup.enter)="getPatient()"
               >
+              <button class="btn btn-primary btn-xs " type="button">
+                <i class="fas fa-fingerprint"></i>
+              </button>
+            </div>
             </div>
             <div class="col-md-4">
               <label>Apellidos</label>
