--- a/src/app/ventas/venta/venta.component.html
+++ b/src/app/ventas/venta/venta.component.html
@@ -187,59 +187,75 @@
                 </div>
             </div>
               </div>
-              <div class="col-md-8">
+              <div class="col-md-7 offset-md-1">
                 <div class="row">
-                  <div class="col-md-10">
+                  <div class="col-md-3">
                     <label>Codigo de Barras</label>
-                    <input type="text" class="form-control">
-                  </div>
-                  <div class="col-md-2">
-                    <label>%</label>
-                    <input type="text" class="form-control">
-                  </div>
-                </div>
-                <div class="row mt-2">
-                  <div class="col-md-4">
-                    <label>Codigo EAN 8</label>
-                    <input type="text" class="form-control">
-                  </div>
-                  <div class="col-md-4">
-                    <label>Codigo EAN 12</label>
-                    <input type="text" class="form-control">
-                  </div>
-                  <div class="col-md-4">
-                    <label>Usuario Vendedor</label>
-                    <input type="text" class="form-control">
-                  </div>
-                </div>
-                <div class="row mt-2">
-                  <div class="col-md-6">
-                    <label>Nombre del producto</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control form-control-sm">
                   </div>
                   <div class="col-md-3">
                     <label>Precio</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control form-control-sm">
+                  </div>
+                  <div class="col-md-3">
+                    <label>Nombre</label>
+                    <input type="text" class="form-control form-control-sm">
                   </div>
                   <div class="col-md-2">
-                    <label>Cantidad</label>
-                    <input type="number" class="form-control">
+                    <label>%</label>
+                    <input type="text" class="form-control form-control-sm">
                   </div>
                   <div class="col-md-1 mt-4">
-                    <button class="btn btn-danger btn-sm mt-2"> <i class="fas fa-search"></i> </button>
+                    <button class="btn btn-danger btn-xs mt-1"> <i class="fas fa-search"></i> </button>
                   </div>
                 </div>
+              
+                <hr class="text-success" class="height: 10px !important;">
                 <div class="row">
                   <div class="col-md-12">
-                    <table class="table table-striped table-hover">
-                      <thead style="background-color: black !important;">
-                        <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12"></th>
-                        <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">PRODUCTO</th>
-                        <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">CODIGO</th>
-                        <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">CANTIDAD</th>
-                        <th class="text-uppercase text-white text-xs font-weight-bolder opacity-12">PRECIO</th>
-                      </thead>
-                    </table>
+                    <ul class="list-group list-group-flush list-group-no-gutters mb-5">
+                      <li class="list-group-item">
+                        <div class="d-flex">
+                          <div class="flex-shrink-0">
+                            <img class="avatar avatar-xl avatar-4x3" src="https://htmlstream.com/preview/front-v4.2/html/assets/img/320x320/img2.jpg" alt="Image Description">
+                          </div>
+                          <div class="flex-grow-1 ms-3">
+                            <div class="row">
+                              <div class="col-sm-6 mb-3 mb-sm-0">
+                                <h5><a class="text-dark" href="#">Originals national backpack</a></h5>
+
+                                <div class="d-block d-sm-none">
+                                  <h5 class="mb-1">$29.99</h5>
+                                </div>
+
+                                <div class="d-grid gap-1">
+                                  <div class="text-body">
+                                    <span class="small">Gender:</span>
+                                    <span class="fw-semi-bold small">Men</span>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-md-3">
+                                <div class="row">
+                                  <div class="col-auto">
+                                  <input type="number" class="form-control">
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-4 col-sm-2 d-none d-sm-inline-block text-right">
+                                <div class="row">
+                                  <span class="h5 d-block mb-1">$29.99</span>
+                                  <a class="link-sm link-secondary small" href="javascript:;">
+                                    <i class="fas fa-trash me-1 text-danger"></i> Eliminar
+                                  </a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+
+                    </ul>
                   </div>
                 </div>
               </div>
